fix(selection): fix the selection not visible issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,8 +68,4 @@
     text-underline-offset: 3px;
     text-decoration-thickness: 0.5px;
   }
-
-  ::selection {
-    @apply bg-secondary;
-  }
 }
